examples/invalid/parse_distr_a.sals
-x 5
-y 4
-d 1,a,5,3
-i 100000

13-6  14-2 10-7
12-4  11-8  9-3
